# watchme

./: CMakeLists.txt  LICENSE
cmake/: clangformat.cmake
cmake/thirdparties/: imgui.cmake
lib/: CMakeLists.txt  sources.cmake
lib/inc/watchme/: var.h  watchme.h  window.h
lib/src/watchme/: gui_thread.cpp  gui_thread.h  intvar.cpp  intvar.h  numvar.cpp  numvar.h  ptrvar.cpp  ptrvar.h  strvar.cpp  strvar.h  var.cpp  watchme.cpp  window.cpp  window.h
samples/: CMakeLists.txt  main.cpp
